kind-deployment/payment/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payment
  labels:
    app.kubernetes.io/part-of: quizzler-system
    capability: payment
